<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LocalTV</string>
    <string name="ende">End</string>
    <string name="help">Help</string>
    <string name="back">Back to the overview</string>
    <string name="cannotStartTV">Cannot start TV.</string>
    <string name="flashNotInstalled">Adobe Flash Player is not installed!</string>
    <string name="flashDownloadText">Thus LocalTV work you need the latest free Adobe Flash Player!\n\nIf you have had already installed it once you can relate it back from the \'Google Play\' Store.\nIf you have never had it you can use \'Direct Download\' to download and install it.</string>
    <string name="solPlayerDownloadText">To watch the Live streams without any problems, please download and install the free Sol HLS Player from the Google Play Store.</string>
    <string name="vPlayerDownloadText">A good player to watch live videos is \'VPlayer\'. You can download it from the Google Play Store.</string>
    <string name="mxPlayerDownloadText">A good player to watch live videos is \'MX Player\'. You can download it from the Google Play Store.</string>
    <string name="internetNotConnected">You are not connected to the internet!</string>
    <string name="info">Info</string>
    <string name="infoDatenmenge">Watching TV consumes a lot of data. I recommend the use of a wireless network.</string>
    <string name="infoFeatureEmail">Is a local station missing? If it\'s possible I will add it (only local and special interest channels!). Click the email and tell me your wishes. \n\n <u>androider@wolke7.net</u></string>
    <string name="infoCopyright">&#169; 2013 by Koni\n\nContents belong to their respective copyright holders. LocalTV has no connection to the provider of the internet streams.</string>
    <string name="infoZweck">LocalTV has arisen because I missed a couple of TV channels on my Android device. The goal of LocalTV is to provide a few smaller local and special interest television channels on your Android device. The bigger, more commercial stations can be found here. You can find them at:</string>
    <string name="infoZattoo"><u>www.zattoo.com</u></string>
    <string name="infoWilmaa"><u>www.wilmaa.com</u></string>
    <string name="infoTeleboy"><u>www.teleboy.ch</u></string>
    <string name="infoBlick"><u>tv.blick.ch</u></string>
    <string name="infoSchoenerFernsehen"><u>www.schoener-fernsehen.com</u></string>    
    <string name="infoNelloTv"><u>www.nello.tv</u></string>    
    <string name="infoSenderNichtLive">Some local stations do not have a live internet stream. However, they have a large archive of shows. To get quickly to the recent broadcasts I\'ve added a link to their broadcast archives.</string>
    <string name="emailAndroider">androider@wolke7.net</string>
    <string name="emailText">Hello Koni\n\nI am missing the following station: \n\n\n\n</string>
<!--     <string name="vollbild">For full screen&#8230;\n&#8230;long press on the image, then the full-screen button.\n&#8230;\nor use the small square button on the bottom bar.</string> -->
	<string name="notLive">This station does not have a live stream to the internet.\nBut have fun browsing the archive!</string>
    <string name="googlePlay">Google Play</string>
	<string name="directDownload">Direct Download</string>
	<string name="neinDanke">No thanks</string>
	<string name="verbinde">Connecting&#8230; Please wait&#8230;\n(up to 30 seconds)</string>
	<string name="live">Live</string>
	<string name="archiv">Archive</string>
	<string name="alle">All</string>
	<string name="website">\nWebsite:\n<u>http://sites.google.com/site/androiderwolke</u></string>
	<string name="searchHint">&#8230;channel search&#8230;</string>
	<string name="search">Search</string>
	<string name="favourites">Favourites</string>
	<string name="favouritesHelp">Add favourites by long click on the station name\nRemove favourites by long click on the station name in the \'Favourites\' tab</string>
	<string name="emptyString"></string>
	<string name="switzerland">-- Land: Switzerland --</string>
	<string name="germany">-- Land: Germany --</string>
	<string name="austria">-- Land: Austria --</string>
	<string name="otherCountries">-- Other countries --</string>	
	<string name="incomingCall">Closing. Incoming call.</string>	
	<string name="helpText">Do you have problems with LocalTV?\nDo you see just a black screen?\nDoesn\'t stop the sound?\n\nClick \"App-Info\" below and \"Clear Data\" and/or \"Force stop\". Caution: \"Clear Data\" will also delete the favourites.\nAfter this start LocalTV again.</string>	
	<string name="appInfo">App-Info</string>
	<string name="openExternalPlayer">Opening external player&#8230;</string>
	<string name="addedToFavourites">added to favourites</string>
	<string name="removedFromFavourite">removed from favourites</string>	
	<string name="pressScreenToStartSRF">PRESS screen to start SRF stream !!!! Then wait 30 sec. for video signal.</string>	
	<string name="noFavouritesYet">No favorites yet.\nTo add a favourite just long press on a station name.</string>
	<string name="flash">Adobe Flash Player</string>
	<string name="flashPlayerOptions">Flash Player Options</string>
	<string name="getLatestFlash">get latest Flash Player</string>
	<string name="solHlsPlayer">Sol HLS Player</string>
	<string name="vPlayer">VPlayer</string>
	<string name="settings">Settings</string>
	<string name="playerType">Player type</string>
	<string name="playerInternalExternal">What player?</string>
	<string name="playerUseInternalPlayer">Internal Android player</string>
	<string name="playerUseSolHlsPlayer">Sol HLS Player</string>
	<string name="playerUseOtherPlayer">Other external player</string>
	<string name="playerOptionsSummary">%1$s</string>
	<string name="flashOptionsSummary">%1$s</string>
	<string name="flashDoNotUse">Do not use flash player</string>
	<string name="flashWhenNoOther">Use flash when no other stream present</string>
	<string name="flashAlways">Use always flash (when applicable)</string>
			
    <string-array name="flashOptionsEntries">
        <item>@string/flashDoNotUse</item>
        <item>@string/flashWhenNoOther</item>
        <item>@string/flashAlways</item>
   	</string-array>
    <string-array name="flashOptionsValaues">
        <item>@string/flashDoNotUse</item>
        <item>@string/flashWhenNoOther</item>
        <item>@string/flashAlways</item>
   	</string-array>

    <string-array name="playerOptionsEntries">
        <item>@string/playerUseInternalPlayer</item>
        <item>@string/playerUseSolHlsPlayer</item>
        <item>@string/playerUseOtherPlayer</item>
   	</string-array>
    <string-array name="playerOptionsValaues">
        <item>@string/playerUseInternalPlayer</item>
        <item>@string/playerUseSolHlsPlayer</item>
        <item>@string/playerUseOtherPlayer</item>
   	</string-array>
    		
</resources>
