<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<ScrollView android:id="@+id/scroll" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<LinearLayout android:layout_width="fill_parent"
			android:orientation="vertical" android:layout_height="wrap_content"
			android:scrollbars="vertical">
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:layout_gravity="center"
				android:text="@string/app_name" android:textColor="#BA002B"
				android:textSize="20dip" android:layout_margin="10dip"
				android:id="@+id/textViewAppName" />
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:layout_gravity="center"
				android:id="@+id/textViewAppVersion" />
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:layout_gravity="center"
				android:text="@string/infoCopyright" android:id="@+id/textViewCopyright"
				android:layout_margin="5dip" />
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
				android:orientation="vertical" android:gravity="center"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:id="@+id/adsLayout">
				<com.google.ads.AdView android:id="@+id/adView"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:gravity="center" ads:adUnitId="a14dc9885936cd9" ads:adSize="BANNER"
					ads:loadAdOnCreate="false" />
			</LinearLayout>
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:gravity="center"
				android:layout_gravity="center" android:id="@+id/textViewFeatureEmail"
				android:layout_marginTop="5dip" android:text="@string/infoFeatureEmail" />
			<Button android:layout_margin="30dip" android:id="@+id/buttonZurueck"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:text="@string/back" android:layout_gravity="left" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>
